
   - input/0
   - output/0

  Existing code that uses these modes should replace their use with `in'
  or `out' respectively.

* The following functions have been added to the cord module

   - to_list/1     (synonym for the existing list/1 function)
   - to_rev_list/1 (synonym for the existing rev_list/1 function)

* The following function has been added to the array2d module

   - is_empty/1

Changes to the Mercury compiler:

* We have added a new option --warn-dead-preds. While the existing option
  --warn-dead-procs asks the compiler to generate warnings for every
  unused procedure of the module being compiled, the new option asks
  the compiler to generate a warning for an unused procedure only if
  none of the procedures of a predicate or function is used.

* We have fixed a long-standing bug causing crashes in deep profiling
  grades, related to unify/compare for tuples.  (Bug #3)

* We have fixed some bugs with constrained polymorphic modes.

* We have removed legacy support for the following systems:
    - IRIX
    - OSF/1

* The asm_fast* and reg* grades now work on 64-bit Intel OS X systems when
  using GCC as the C compiler.
  See README.MacOS for further details.

* The compiler now reports an error for binary/octal/hexadecimal integer
  literals that cannot be represented in the compiler's native int type.

* Class files generated for executables in the Java grade are now automatically
  packaged up into Java archives (JARs).

* The -generate-module-order and --imports-graph options no longer imply
  --generate-dependencies.

* The compiler does not set the runtime search path when
  --mercury-linkage=static is used.

* We have added an option --no-default-runtime-library-directory to
  prevent the compiler adding any directories to the runtime search path
  automatically.

Change to the Mercury debugger:

* Interactive queries are now supported on OS X.

* The "break" command can now auto-complete on the filename:linenumber pairs